tests/paczka1/fuzzy1/43717421.err
Error in line 3: S924 A62 93,4
Error in line 4: cuqgdCklaB S11 46,2
Error in line 5: S924 S11 38,5
Error in line 20: S924 S924 90,4
Error in line 29: valR S11 24,6
Error in line 28: YS1 S914 66,7
Error in line 36: YS1 S924 56,5
Error in line 21: cuqgdCklaB S914 68,9
